--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
-    "eslint": "^7.30.0"
+    "@types/express": "^4.17.13",
+    "eslint": "^7.30.0",
+    "eslint-plugin-prettier": "^3.4.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1"
   }
 }
