--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,13 @@
         "es2021": true,
         "node": true
     },
+    "plugins": ["prettier"],
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "rules": {
+        "prettier/prettier": "error"
     }
 }
