--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/preset-env": "^7.14.7",
     "@types/express": "^4.17.13",
     "eslint": "^7.30.0",
-    "eslint-plugin-prettier": "^3.4.0"
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
