--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": "https://github.com/jotaajunior/bot-takeblip.git",
   "author": "Jota Júnior <jjunior@protonmail.ch>",
+  "type": "module",
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
