--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "repository": "https://github.com/jotaajunior/bot-takeblip.git",
   "author": "Jota Júnior <jjunior@protonmail.ch>",
+  "engines": {
+    "node": ">=14.00"
+  },
   "type": "module",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -16,5 +19,8 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "serve": "node src/index.js"
   }
 }
